# distill_prostt5

./: .gitignore  README.md  pyproject.toml  run.py
container/: Dockerfile
replication/: README.md
scope40/: README.md
scope40/rocx/: foldseekaln.rocx  mini_vs_mini.rocx  mini_vs_pdb.rocx  prostt5_vs_pdb.rocx  prostt5_vs_prostt5.rocx
scope40/scop_foldseekdb/: scop  scop.lookup  scop.source  scop_ca.index  scop_h  scop_h.index  scop_ss  scop_ss.index
scripts/: README.md  download_decode_prostt5_dataset.py
src/distill_prostt5/: __init__.py
src/distill_prostt5.egg-info/: PKG-INFO  SOURCES.txt
src/distill_prostt5/classes/: MPROSTT5_bert.py  datasets.py
src/distill_prostt5/utils/: generate_foldseek_db_milot.py  inference.py  initialisation.py
